--- a/frontend/src/components/ProductCard.css
+++ b/frontend/src/components/ProductCard.css
@@ -19,7 +19,7 @@
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
 }
 
-.product-card__image {
+.product-card img {
     width: 100%;
     height: 200px;
     object-fit: cover;
